# iced_test

./: Cargo.toml  Makefile  build.rs
resources/osx/Iced_Test.app/Contents/: Info.plist
src/: main.rs
src/gui/: assets.rs  bar.rs  foot.rs  left_view.rs  mod.rs
src/gui/styles/: container_styles.rs  mod.rs  text_input.rs  text_styles.rs  theme.rs
src/gui/views/: bandin_view.rs  listview.rs  mod.rs  order_view.rs  query_view.rs
src/gui/views/other/: login.rs  mod.rs  tip.rs
src/util/: sql.rs  util.rs
