[package]
name = "Iced_Test"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[features]
date_picker = ["chrono"]

[dependencies]
iced = {version = "0.10.0" , default-features = false, features = ["tokio","image","svg"]}
iced_aw = { version = "0.7", default-features = false, features = ["date_picker","modal","card"] }
tokio = { version = "1.33",features = ["default"]}
# tokio-util = {version = "0.7.9", default-features = false, features = ["net","compat"]}
chrono = { version = "0.4.31", default-features = false, optional = true }
time = { version = "0.3.29", default-features = false, features = ["local-offset"] }
# tiberius={version="0.12.2",features = ["chrono","tds73"],default-features = false}
image = { version = "0.24.7", default-features = false, features = ["png"]}
mysql_async = { version = "0.33.0", default-features = false, features = ["default-rustls"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3


[build-dependencies]
embed-resource = "2.4"

